# tock-registers

./: Cargo.toml  Makefile  rust-toolchain.toml
codegen/: Cargo.toml
codegen/src/: lib.rs  parse.rs  parse_outcome.rs  parse_tests.rs
examples/: error_test.rs  rng.rs
expand_macros/src/: main.rs
macros/: Cargo.toml
macros/src/: ast.rs  block.rs  generate.rs  lib.rs  parse.rs  parse_tests.rs  validation.rs
macros/src/generate/: block.rs  block_tests.rs  mod.rs  single.rs  single_tests.rs
src/: array.rs  bus.rs  debug.rs  fake_register.rs  internal.rs  lib.rs  mmio.rs  read.rs  reexport.rs  register_trait.rs  registers.rs  registers_macro.rs  write.rs
tests/: no_prelude.rs
