# Licensed under the Apache License, Version 2.0 or the MIT License.
# SPDX-License-Identifier: Apache-2.0 OR MIT
# Copyright Tock Contributors 2026.

[package]
name = "tock-registers-macros"
version.workspace = true
authors.workspace = true
description = "Proc macros for tock-registers"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"

[dependencies.syn]
# TODO: Re-evaluate features
default-features = false
features = ["full", "parsing", "proc-macro"]
version = "2.0.114"

[dev-dependencies.syn]
# TODO: Re-evaluate features
default-features = false
features = ["extra-traits", "printing"]
version = "2.0.114"
